--- a/music.html
+++ b/music.html
@@ -76,7 +76,10 @@
 <!-- Notifications --> 
 <div id="popup-notifications"></div>  
 
-<script src="./vendor/jquery/jquery-3.5.1.min.js"></script>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
 <script src="./vendor/plyr/plyr.min.js"></script>
 <script src="./vendor/plyr/html5media.min.js"></script>
 <script src="js/jquery.custom.js"></script>
