--- a/user-profile.html
+++ b/user-profile.html
@@ -285,9 +285,12 @@
 <!-- Notifications --> 
 <div id="popup-notifications"></div>  
 
-<script src="./vendor/jquery/jquery-3.5.1.min.js"></script>
-<script src="./vendor/jquery/jquery.validate.min.js" ></script>
-<script src="./vendor/swiper/swiper.min.js"></script>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js" integrity="sha512-UdIMMlVx0HEynClOIFSyOrPggomfhBKJE28LKl8yR3ghkgugPnG6iLfRfHwushZl1MOPSY6TsuBDGPK2X4zYKg==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.5/swiper-bundle.min.js" integrity="sha512-1LlEYE0qExJ/GUfAJ0k2K2fB5sIvMv/q6ueo3syohvQ3ElWDQVSMUOf39cxaDWHtNu7M6lF6ZC1H6A1m3SvheA==" crossorigin="anonymous"></script>
 <script src="js/swiper-init.js"></script>
 <script src="js/jquery.custom.js"></script>
 </body>
